--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook - Log In or Sign Up</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css"> <!-- Corrected path -->
 </head>
 <body>
     <div class="container">
@@ -16,7 +16,7 @@
         <div class="right-section">
             <form>
                 <input type="text" placeholder="Email or Phone No." required>
-                <input type="password" placeholder="Pass." required>
+                <input type="password" placeholder="Password" required> <!-- Corrected placeholder text -->
                 <button type="submit">Log In</button>
                 <a href="#" class="forgot-password">Forgotten password?</a>
 
@@ -28,7 +28,7 @@
     </div>
 
     <footer>
-        <p><a href="#">Create a Page</a> for a celebrity, brand or business.</p>
+        <p><a href="#">Create a Page</a> for a celebrity, brand, or business.</p>
     </footer>
 </body>
 </html>
