--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="left-section">
-            <h1>facebook</h1>
+            <h1>facebook_clone</h1>
             <p>Connect with friends and the world around you on Facebook.</p>
         </div>
 
