--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <div class="left-section">
-            <h1>facebook</h1>
+            <h1>FACEBOOK</h1>
             <p>Connect with friends and the world around you on Facebook.</p>
         </div>
 
         <div class="right-section">
             <form>
-                <input type="text" placeholder="Email or Phone No." required>
+                <input type="text" placeholder="Email or Phone Number." required>
                 <input type="password" placeholder="Password" required> <!-- Corrected placeholder text -->
                 <button type="submit">Log In</button>
                 <a href="#" class="forgot-password">Forgotten password?</a>
